=========
Changelog
=========

Version 4.8.1 BETA (October ??, 2012)

- Removed obsolete "Into the Nexus" quest.  Thanks yunohu!
- Removed some obsolete Pandaria quests that never made it into release.
- Removed Keys, Relics and Thrown weapons from quest rewards.
- Updated Map names for Atlas 1.22.0
- Fixed AtlasQuest button not showing up in Atlas.  Thanks Washakie!
- Localizations updated: deDE, enUS, zhCN



Version 4.8.0 BETA  (August 28, 2012)

- Clarified location of quest giver for Auchenai Crypts: Raging Spirits.  (thanks yunohu)
- Updated TOC File and added basic support for Mists of Pandaria dungeons, raids and battlegrounds.
- Removed "Story" button.  Blizzard's ingame Dungeon Journal replaces this much better.

- Quests added: 
	- Scholomance: The Four Tomes
	- Scholomance: An End to the Suffering
	- Scarlet Monastery: Blades of the Anointed
	- Scarlet Monastery: Unto Dust Thou Shalt Return
	- Scarlet Halls: Rank and File
	- Scarlet Halls: Just for Safekeeping, Of Course
	- Mogu'Shan Palace: Relics of the Four Kings
	- Mogu'Shan Palace: A New Lesson for the Master
	- Shado-pan Monastery: Into the Monastery
	- Shado-pan Monastery: Into the Mouth of Hatred
	- Shado-pan Monastery: Lord of the Shado-Pan
	- Shado-pan Monastery: The Path to Respect Lies in Violence
	- Stormstout Brewery: Into the Brewery
	- Stormstout Brewery: Trouble Brewing
	- Stormstout Brewery: Family Secrets
	- Temple of the Jade Serpent: Restoring Jade's Purity
	- Temple of the Jade Serpent: Deep Doubts, Deep Wisdom
	- The Gate of the Setting Sun: Lighting the Way
	- The Gate of the Setting Sun: That's a Big Bug!
	- Siege of Niuzao Temple: Somewhere Inside
	- Siege of Niuzao Temple: Take Down the Wing Leader




Version 4.7.1 (March 27, 2012)

- Fix / clarification in Dragon Soul quests: Cluster Clutch and Sharpening Your Fangs.
- Really fixed minor bug relating to variable loading (thanks Kharthus)
- Localizations updated: deDE, enUS




Version 4.7.0 (February 9, 2012)
